--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="#">Bijouterie</a>
+            <a class="navbar-brand" href="#">Travel</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('catalogue') }}">Accueil</a>
+                        <a class="nav-link" href="#">Accueil</a>
                     </li>
 
                     {% if not app.user %}
@@ -47,20 +47,20 @@
 
                             tableau en twig:   {"key" : "value"}
                          #}
-                        <a class="nav-link" href="{{ path('registration') }}">Inscription</a>
+                        <a class="nav-link" href="{{ path('registration')}}">Inscription</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('login') }}">Connexion</a>
+                        <a class="nav-link" href="{{ path('login')}}">Connexion</a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('cart') }}">Accès au panier</a>
+                        <a class="nav-link" href="#">Accès au panier</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('produit_afficher') }}">Gestion des produits</a>
+                        <a class="nav-link" href="#">Gestion des produits</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('contact') }}">Nous contacter</a>
+                        <a class="nav-link" href="#">Nous contacter</a>
                     </li>
 
                 </ul>
