--- a/templates/panelAdmin.html.twig
+++ b/templates/panelAdmin.html.twig
@@ -23,9 +23,9 @@
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
                             <a class="dropdown-item" href="#">Profil</a>
-                            <a class="dropdown-item" href="{{ path('catalogue') }}">Accès Front</a>
+                            <a class="dropdown-item" href="">Accès Front</a>
                             <hr>
-                            <a class="dropdown-item" href="{{ path('logout') }}">Déconnexion</a>
+                            <a class="dropdown-item" href="">Déconnexion</a>
                         </div>
                     </div>
                 </div>
@@ -36,8 +36,8 @@
                     <div class="btn-group" role="group">
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
-                            <a class="dropdown-item" href="{{ path('produit_afficher') }}">Liste des articles</a>
-                            <a class="dropdown-item" href="{{ path('produit_ajouter') }}">Ajout article</a>
+                            <a class="dropdown-item" href="">Liste des articles</a>
+                            <a class="dropdown-item" href="">Ajout article</a>
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
                             <a class="dropdown-item" href="">Liste catégories</a>
-                            <a class="dropdown-item" href="{{ path('addCategory') }}">Ajout catégorie</a>
+                            <a class="dropdown-item" href="">Ajout catégorie</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
                             <a class="dropdown-item" href="">Liste matières</a>
-                            <a class="dropdown-item" href="{{ path('addMatiere') }}">Ajout matière</a>
+                            <a class="dropdown-item" href="">Ajout matière</a>
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     <div class="btn-group" role="group">
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
-                            <a class="dropdown-item" href="{{ path('recapAdmin') }}">Commandes en cours</a>
+                            <a class="dropdown-item" href="">Commandes en cours</a>
                             <a class="dropdown-item" href="#">Historique des commandes</a>
                         </div>
                     </div>
