--- a/templates/panelAdmin.html.twig
+++ b/templates/panelAdmin.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Bijouterie{% endblock %}</title>
+    <title>{% block title %}Travel{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.0.1/lux/bootstrap.min.css" integrity="sha512-EJJuqC8nbI+dUjDM89eZ8dVmckG/vAfKIhmW4pi3Y/S1gE8uvIHuPqpbZ3/DliUQOZbS0Wp7317zoPRRoX+E+A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="{{ asset("css/style.css") }}">
@@ -23,7 +23,7 @@
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
                             <a class="dropdown-item" href="#">Profil</a>
-                            <a class="dropdown-item" href="{{ path('catalogue') }}">Accès Front</a>
+                            <a class="dropdown-item" href="">Accès Front</a>
                             <hr>
                             <a class="dropdown-item" href="{{ path('logout') }}">Déconnexion</a>
                         </div>
@@ -36,8 +36,8 @@
                     <div class="btn-group" role="group">
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
-                            <a class="dropdown-item" href="{{ path('produit_afficher') }}">Liste des articles</a>
-                            <a class="dropdown-item" href="{{ path('produit_ajouter') }}">Ajout article</a>
+                            <a class="dropdown-item" href="">Liste des articles</a>
+                            <a class="dropdown-item" href="">Ajout article</a>
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
                             <a class="dropdown-item" href="">Liste catégories</a>
-                            <a class="dropdown-item" href="{{ path('addCategory') }}">Ajout catégorie</a>
+                            <a class="dropdown-item" href="">Ajout catégorie</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
                             <a class="dropdown-item" href="">Liste matières</a>
-                            <a class="dropdown-item" href="{{ path('addMatiere') }}">Ajout matière</a>
+                            <a class="dropdown-item" href="">Ajout matière</a>
                         </div>
                     </div>
                 </div>
@@ -72,8 +72,8 @@
                     <div class="btn-group" role="group">
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
-                            <a class="dropdown-item" href="{{ path('recapAdmin') }}">Commandes en cours</a>
-                            <a class="dropdown-item" href="#">Historique des commandes</a>
+                            <a class="dropdown-item" href="">Commandes en cours</a>
+                            <a class="dropdown-item" href="">Historique des commandes</a>
                         </div>
                     </div>
                 </div>
@@ -96,8 +96,8 @@
                     <div class="btn-group" role="group">
                         <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1" style="">
-                            <a class="dropdown-item" href="#">Dropdown link</a>
-                            <a class="dropdown-item" href="#">Dropdown link</a>
+                            <a class="dropdown-item" href="">Dropdown link</a>
+                            <a class="dropdown-item" href="">Dropdown link</a>
                         </div>
                     </div>
                 </div>
