--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Bijouterie{% endblock %}</title>
+        <title>{% block title %}Voyage voyage{% endblock %}</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.0.1/lux/bootstrap.min.css" integrity="sha512-EJJuqC8nbI+dUjDM89eZ8dVmckG/vAfKIhmW4pi3Y/S1gE8uvIHuPqpbZ3/DliUQOZbS0Wp7317zoPRRoX+E+A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="#">Bijouterie</a>
+            <a class="navbar-brand" href="#">Travel Agency</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('catalogue') }}">Accueil</a>
+                        <a class="nav-link" href="">Accueil</a>
                     </li>
 
                     {% if not app.user %}
@@ -54,13 +54,13 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('cart') }}">Accès au panier</a>
+                        <a class="nav-link" href="">Accès au panier</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('produit_afficher') }}">Gestion des produits</a>
+                        <a class="nav-link" href="">Gestionnaire</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('contact') }}">Nous contacter</a>
+                        <a class="nav-link" href="">Nous contacter</a>
                     </li>
 
                 </ul>
