--- a/templates/hotel/hotel_afficher.html.twig
+++ b/templates/hotel/hotel_afficher.html.twig
@@ -17,7 +17,7 @@
 
 
     <div class="row justify-content-end">
-        <a class="btn btn-success col-md-2" href="{{ path('addHotel') }}">Ajouter un hotel</a>
+        <a class="btn btn-primary col-md-2 m-2" href="{{ path('hotel_ajouter') }}">Ajouter un hotel</a>
     </div>
 
     {% if hotels is not empty %} 
