--- a/templates/hotel/hotel_afficher.html.twig
+++ b/templates/hotel/hotel_afficher.html.twig
@@ -94,7 +94,7 @@
                         </td>
 
                         <td>
-                            <a href="{{ path("hotel_supprimer", {"id":hotel.id} ) }}" onclick="return confirm('Confirmez-vous la suppression de l'hotel?')">
+                            <a href="{{ path("hotel_supprimer", {"id":hotel.id} ) }}" onclick="return confirm('Confirmez-vous la suppression de l\'hotel?')">
                                 <img src="{{ asset('images/delete.png') }}" alt="">
                             </a>
                         </td>
