--- a/templates/aie_loc/voiture_ajouter.html.twig
+++ b/templates/aie_loc/voiture_ajouter.html.twig
@@ -11,9 +11,9 @@
 
     {{ form_row(formVoiture.modele) }}
     {{ form_row(formVoiture.prix) }}
-    {{ form_row(formVoiture.prixencharge) }}
+    {{ form_row(formVoiture.villeDepart) }}
     {{ form_row(formVoiture.date) }}
-    {{ form_row(formVoiture.restitution) }}
+    {{ form_row(formVoiture.villeArrivee) }}
     {{ form_row(formVoiture.dateRetour) }}
     {{ form_row(formVoiture.image, {
         "attr" : {
