--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,13 +40,13 @@
                         <div id="mainNav" class="collapse navbar-collapse tm-bg-white">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#top">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link active" href="{{ path('nicole') }}">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ path ('vols') }}">vols</a>
+                                    <a class="nav-link" href="{{ path ('voles') }}">vols</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ path('hotels') }}" >hotels</a>
+                                    <a class="nav-link" href="{{ path('hoteles') }}" >hotels</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{ path ('locations') }}">locations</a>
@@ -112,11 +112,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{ path('login') }}"><span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                                      </svg></a>
+                                            </svg></span></a>
                                 </li>
                                 {% endif %}
-                                    </a>
-                                </li>
+
                             </ul>
                         </div>
                     </nav>
@@ -125,6 +124,10 @@
         </div><!-- .tm-top-bar -->
 
     <div class="container">
+        {% block body %}
+
+        {% endblock %}
+
     </div>
 
 
@@ -283,6 +286,7 @@
             });
 
         </script>
+    </div>
     </body>
 
 
