--- a/templates/nicole/catalogue-vols.html.twig
+++ b/templates/nicole/catalogue-vols.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+    <link rel="stylesheet"  href="{{ asset("css/sidebar.css") }}"/>
 <section class="p-5 tm-container-outer tm-bg-gray">
     <div class="container">
         <div class="row">
@@ -12,6 +13,46 @@
     </div>
 </section>
 
+
+
+    <div id="sidebar">
+        <div class="toggle-btn">
+            <button class="close" onclick="show()">
+                ❌
+            </button>
+
+            <h3 class="h3-title">Tarifs sélectionné pour Barcelone</h3>
+            <p>votre sélection s'applique à tous vos vols</p>
+            <div class="sidecard">
+                <h3>70$</h3>
+                <p>Classe Économique</p>
+                <ul>
+                    <li> choix du siége</li>
+                    <li>Objet personnel</li>
+                </ul>
+                <h6>Bagage en main</h6>
+                <p>1er bagage enregitré : 10$ - 50$ jusqu'à 15kg</p>
+                <p>2e bagage enregistré : 10$ - 50$</p>
+            </div>
+            <p class="p-texte">
+                Les frais de bagages correspondent aux informations actuelles que nous recevons de la compagnie aérienne sur la base des restrictions de taille et de poids. Les mises à jour des frais de bagages standard peuvent faire l’objet de retard. Une fourchette de frais peut n’être disponible que pour certaines compagnies aériennes. Pour plus d’informations.
+            </p>
+
+            <div class="div-continuer">
+                <div><h4>70$</h4>
+                    <p>Aller-Retour par personne <br>
+                        <strong>Aller-Retour à 58,98$ pour 1 voyageur</strong>
+                    </p>
+
+                </div>
+                <button class="btn-continuer">Continuer</button>
+            </div>
+        </div>
+
+
+    </div>
+
+
 <!-- Tab 4 -->
 <div class="tab-pane fade show active" id="4a">
     <!-- Current Active Tab WITH "show active" classes in DIV tag -->
@@ -23,7 +64,7 @@
                 <p class="tm-text-highlight">Rome</p>
                 <p class="tm-text-gray">Sed egestas, odio nec bibendum mattis, quam odio hendrerit risus, eu varius eros lacus sit amet lectus. Donec blandit luctus dictum...</p>
             </div>
-            <a href="" class="tm-recommended-price-box">
+            <a href="#" id="toggle-button" onclick="show()" class="tm-recommended-price-box">
                 <p class="tm-recommended-price">70$</p>
                 <p class="tm-recommended-price-link">Par jour</p>
             </a>
@@ -71,5 +112,6 @@
     </div>
 </div>
 
-</div> <!-- tab-pane -->
+
+    <script src="{{ asset('js/slider.js') }}"></script><!-- tab-pane -->
 {% endblock %}
