--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -233,6 +233,7 @@ label { font-weight: 700; }
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    background-color: white;
 }
 
 .tm-slideshow-section-reverse {
@@ -377,6 +378,7 @@ label { font-weight: 700; }
     align-items: stretch;
     justify-content: space-around;
     margin-bottom: 25px;
+    background-color: white;
 }
 
 .tm-recommended-title {
@@ -647,6 +649,22 @@ footer p { color: white; }
     .tm-recommended-description-box { width: 270px; }
 }
 
+    .medium{
+        height:550px !important;
+    }
+
+    .small{
+        height:270px !important;
+        width:200px !important;
+    }
+
+    .map{
+    width: 400px;
+    height: 350px;
+    border-radius: 20px;
+    float: right;
+
+    }
 @media screen and (max-width: 767px) {
     .tm-banner-row {
         padding-top: 80px;
