--- a/templates/aie_loc/voiture_afficher.html.twig
+++ b/templates/aie_loc/voiture_afficher.html.twig
@@ -7,32 +7,34 @@
 {% block body %}
 
 
-{# Notification #}
+    {# Notification #}
 
 
-<div class="row justify-content-end">
-    <a class="btn btn-success col-md-2" href="{{ path('voiture_ajouter') }}">Ajouter une voiture</a>
-</div>
+    <div class="row justify-content-end">
+        <a class="btn btn-success col-md-2" href="{{ path('voiture_ajouter') }}">Ajouter une voiture</a>
+    </div>
 
-{% if voitures is not empty %}
+    {% if voitures is not empty %}
 
-    <table class="table table-dark table-hover table-striped text-center mt-3">
-        <thead>
+        <table class="table table-dark table-hover table-striped text-center mt-3">
+            <thead>
             <tr>
                 <th>ID</th>
                 <th>Modele</th>
                 <th>Prix/jour (€)</th>
                 <th>Photo</th>
-                <th>Prise en charge</th>
-                <th>Restitution</th>
+                <th>Ville</th>
+                <th>Pays</th>
+                <th>Ville</th>
+                <th>Pays</th>
                 <th>Date depart</th>
                 <th>Date Retour</th>
                 <th>Modifier</th>
                 <th>Supprimer</th>
             </tr>
-        </thead>
+            </thead>
 
-        <tbody>
+            <tbody>
 
             {% for voiture in voitures %}
 
@@ -44,8 +46,10 @@
                     <td>
                         <img src="{{ asset('images/imagesUpload/' ~ voiture.image ) }}" style="width:80px" alt="">
                     </td>
-                    <td>{{ voiture.prixencharge }}</td>
-                    <td>{{ voiture.restitution }}</td>
+                    <td>{{ voiture.villeDepart.name }}</td>
+                    <td>{{ voiture.villeDepart.pays.name }}</td>
+                    <td>{{ voiture.villeArrivee.name }}</td>
+                    <td>{{ voiture.villeArrivee.pays.name }}</td>
                     <td>{{ voiture.date|date("d/m/Y") }}</td>
                     <td>{{ voiture.dateRetour|date("d/m/Y") }}</td>
                     <td>
@@ -58,8 +62,8 @@
                     </td>
                 </tr>
             {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
     {% else %}
         <h4 class="text-center text-danger fst-italic mt-3">Pas de voitures dispo</h4>
